# smssuite-rsk

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
static/: script.js  settings.js  style.css
templates/: index.html  login.html  settings.html
