[project]
name = "smssuite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.182.0",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "phonenumbers>=9.0.14",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "twilio>=9.8.1",
]
